ATS/main/default/objects/Submittal__c/Submittal__c.object-meta.xml
<CustomObject>
    <label>Submittal</label>
    <nameField>
        <displayFormat>Sub - {00000}</displayFormat>
        <label>Submittals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submittals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>