ATS/main/default/objects/Submittal__c/fields/Accepted_Comment__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Comment__c</fullName>
    <description>Accepted Comment</description>
    <inlineHelpText>Accepted Comment</inlineHelpText>
    <label>Accepted Comment</label>
    <type>TextArea</type>
</CustomField>