ATS/main/default/objects/Submittal__c/fields/Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Date__c</fullName>
    <description>Accept Date</description>
    <inlineHelpText>Accepted Date</inlineHelpText>
    <label>Accepted Date</label>
    <type>Date</type>
</CustomField>