ATS/main/default/objects/Submittal__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <formula>Job_Posting__r.Client__r.Name</formula>
    <label>Client</label>
    <type>Text</type>
</CustomField>