ATS/main/default/objects/Submittal__c/fields/Client_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Job_Id__c</fullName>
    <formula>Job_Posting__r.Client_Job_Id__c</formula>
    <label>Client Job Id</label>
    <type>Text</type>
</CustomField>