ATS/main/default/objects/Submittal__c/fields/Current_Salary__c.field-meta.xml
<CustomField>
    <fullName>Current_Salary__c</fullName>
    <label>Current Salary</label>
    <length>100</length>
    <type>Text</type>
</CustomField>