ATS/main/default/objects/Submittal__c/fields/Date_of_Hold__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Hold__c</fullName>
    <label>Date of Hold</label>
    <type>Date</type>
</CustomField>