ATS/main/default/objects/Submittal__c/fields/Duplicate_Record__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Record__c</fullName>
    <label>Duplicate Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>