ATS/main/default/objects/Submittal__c/fields/Final_HR_Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_HR_Interview_Date__c</fullName>
    <description>Final HR Interview Date</description>
    <inlineHelpText>Final HR Interview Date</inlineHelpText>
    <label>Final HR Interview Date</label>
    <type>Date</type>
</CustomField>