ATS/main/default/objects/Submittal__c/fields/Final_HR_Interview_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Final_HR_Interview_Feedback__c</fullName>
    <description>Final HR Interview Feedback</description>
    <inlineHelpText>Final HR Interview Feedback</inlineHelpText>
    <label>Final HR Interview Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>