ATS/main/default/objects/Submittal__c/fields/HR_Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>HR_Interview_Date__c</fullName>
    <description>HR Interview Date</description>
    <inlineHelpText>HR Interview Date</inlineHelpText>
    <label>HR Interview Date</label>
    <type>Date</type>
</CustomField>