ATS/main/default/objects/Submittal__c/fields/HR_Interview_Feedback__c.field-meta.xml
<CustomField>
    <fullName>HR_Interview_Feedback__c</fullName>
    <description>HR Interview Feedback</description>
    <inlineHelpText>HR Interview Feedback</inlineHelpText>
    <label>HR Interview Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>