ATS/main/default/objects/Submittal__c/fields/Internal_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Internal_Hold_Reason__c</fullName>
    <inlineHelpText>Enter the reason why you are holding the Resource</inlineHelpText>
    <label>Internal Hold Reason</label>
    <type>TextArea</type>
</CustomField>