ATS/main/default/objects/Submittal__c/fields/Internal_Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Internal_Reject_Reason__c</fullName>
    <inlineHelpText>Enter the reason Why you rejected this resource</inlineHelpText>
    <label>Internal Reject Reason</label>
    <type>TextArea</type>
</CustomField>