ATS/main/default/objects/Submittal__c/fields/Internal_Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>Internal_Verification_Date__c</fullName>
    <description>Internal Verification Completed Date</description>
    <inlineHelpText>Internal Verification Completed Date</inlineHelpText>
    <label>Internal Verification Date</label>
    <type>Date</type>
</CustomField>