ATS/main/default/objects/Submittal__c/fields/Internal_Verification_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Internal_Verification_Feedback__c</fullName>
    <inlineHelpText>Internal Verification Feeback</inlineHelpText>
    <label>Internal Verification Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>