ATS/main/default/objects/Submittal__c/fields/Internal_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Internal_Verification_Status__c</fullName>
    <label>Internal Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Approached</fullName>
            </value>
            <value>
                <fullName>Waiting for response</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>