ATS/main/default/objects/Submittal__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <formula>Job_Posting__r.Job_Title__c</formula>
    <label>Job Title</label>
    <type>Text</type>
</CustomField>