ATS/main/default/objects/Submittal__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <description>Salary in LPA</description>
    <inlineHelpText>Salary in LPA</inlineHelpText>
    <label>Package</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>