ATS/main/default/objects/Submittal__c/fields/phone_number__c.field-meta.xml
<CustomField>
    <fullName>phone_number__c</fullName>
    <formula>Resource__r.Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>phone number</label>
    <type>Text</type>
</CustomField>