ATS/main/default/objects/Submittal__c/fields/Reason_for_Holding__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Holding__c</fullName>
    <label>Reason for Holding</label>
    <type>TextArea</type>
</CustomField>