ATS/main/default/objects/Submittal__c/fields/Reason_for_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Rejection__c</fullName>
    <description>Reason for Rejection</description>
    <inlineHelpText>Reason for Rejection</inlineHelpText>
    <label>Reason for Rejection</label>
    <type>TextArea</type>
</CustomField>