ATS/main/default/objects/Submittal__c/fields/Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Date__c</fullName>
    <description>Rejected Date</description>
    <inlineHelpText>Rejected Date</inlineHelpText>
    <label>Rejected Date</label>
    <type>Date</type>
</CustomField>