ATS/main/default/objects/Submittal__c/fields/Send_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>It send an Email Notification</inlineHelpText>
    <label>Send Notification</label>
    <type>Checkbox</type>
</CustomField>