ATS/main/default/objects/Submittal__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Internal Verification</fullName>
            </value>
            <value>
                <fullName>Ready to Submit</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>HR Interview</fullName>
            </value>
            <value>
                <fullName>Technical Interview 1</fullName>
            </value>
            <value>
                <fullName>Technical Interview 2</fullName>
            </value>
            <value>
                <fullName>Final HR Interview</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Final_Decision</fullName>
                <isActive>false</isActive>
                <label>Final Decision</label>
            </value>
            <value>
                <fullName>Internal Hold</fullName>
                <isActive>false</isActive>
                <label>Internal Hold</label>
            </value>
            <value>
                <fullName>Internal Rejection</fullName>
                <isActive>false</isActive>
                <label>Internal Rejection</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>