ATS/main/default/objects/Submittal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Internal Accept</fullName>
            </value>
            <value>
                <fullName>Internal Hold</fullName>
            </value>
            <value>
                <fullName>Internal Reject</fullName>
            </value>
            <value>
                <fullName>Client Accept</fullName>
            </value>
            <value>
                <fullName>Client Reject</fullName>
            </value>
            <value>
                <fullName>Client Hold</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
                <isActive>false</isActive>
                <label>Hold</label>
            </value>
            <value>
                <fullName>Reject</fullName>
                <isActive>false</isActive>
                <label>Reject</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>