ATS/main/default/objects/Submittal__c/fields/Submitted_Comment__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Comment__c</fullName>
    <description>Submitted Comment</description>
    <inlineHelpText>Submitted Comment</inlineHelpText>
    <label>Submitted Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>