ATS/main/default/objects/Submittal__c/fields/Technical_Interview_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Technical_Interview_1_Date__c</fullName>
    <description>Technical Interview 1 Date</description>
    <inlineHelpText>Technical Interview 1 Date</inlineHelpText>
    <label>Technical Interview 1 Date</label>
    <type>Date</type>
</CustomField>