ATS/main/default/objects/Submittal__c/fields/Technical_Interview_1_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Technical_Interview_1_Feedback__c</fullName>
    <description>Technical Interview 1 Feedback</description>
    <inlineHelpText>Technical Interview 1 Feedback</inlineHelpText>
    <label>Technical Interview 1 Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>