ATS/main/default/objects/Submittal__c/fields/Trigger_for_Hold__c.field-meta.xml
<CustomField>
    <fullName>Trigger_for_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger for Hold</label>
    <type>Checkbox</type>
</CustomField>