ATS/main/default/objects/Submittal__c/fields/Trigger_for_Reject__c.field-meta.xml
<CustomField>
    <fullName>Trigger_for_Reject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger for Reject</label>
    <type>Checkbox</type>
</CustomField>