ATS/main/default/objects/Submittal__c/validationRules/Accept_Trigger_N.validationRule-meta.xml
<ValidationRule>
    <fullName>Accept_Trigger_N</fullName>
    <active>false</active>
    <errorConditionFormula>AND( OR(ISPICKVAL(Status__c,&apos;Client Accept&apos;), ISPICKVAL(Status__c, &apos;Internal Accept&apos;)) ,
ISBLANK( Accepted_Date__c))</errorConditionFormula>
    <errorDisplayField>Accepted_Date__c</errorDisplayField>
    <errorMessage>Enter Accepted Date</errorMessage>
</ValidationRule>