ATS/main/default/objects/Submittal__c/validationRules/Accept_Trigger_rule_FN.validationRule-meta.xml
<ValidationRule>
    <fullName>Accept_Trigger_rule_FN</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR(ISPICKVAL(Status__c,&apos;Client Accept&apos;), ISPICKVAL(Status__c, &apos;Internal Accept&apos;)) ,
ISBLANK(Accepted_Comment__c ))</errorConditionFormula>
    <errorDisplayField>Accepted_Comment__c</errorDisplayField>
    <errorMessage>Enter Accepted Comment</errorMessage>
</ValidationRule>