ATS/main/default/objects/Submittal__c/validationRules/Final_Hr_Interview_Client_Accept_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Final_Hr_Interview_Client_Accept_date</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL(  Status__c  , &apos;Client Accept&apos;), ISBLANK( Final_HR_Interview_Date__c ))</errorConditionFormula>
    <errorDisplayField>Final_HR_Interview_Date__c</errorDisplayField>
    <errorMessage>Enter HR Interview date</errorMessage>
</ValidationRule>