ATS/main/default/objects/Submittal__c/validationRules/Final_HR_interview_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Final_HR_interview_date</fullName>
    <active>false</active>
    <errorConditionFormula>OR(Final_HR_Interview_Date__c  &lt;  Technical_Interview_2_Date__c, Final_HR_Interview_Date__c  &gt;  TODAY() )</errorConditionFormula>
    <errorDisplayField>Final_HR_Interview_Date__c</errorDisplayField>
    <errorMessage>Final HR interview date should be technical interview2 date to current date</errorMessage>
</ValidationRule>