ATS/main/default/objects/Submittal__c/validationRules/Final_Hr_Interview_feedback_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Final_Hr_Interview_feedback_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status__c,&apos;Client Accept&apos; ), ISBLANK( Final_HR_Interview_Feedback__c )  )</errorConditionFormula>
    <errorDisplayField>Final_HR_Interview_Feedback__c</errorDisplayField>
    <errorMessage>Enter Final Hr Interview Feedback</errorMessage>
</ValidationRule>