ATS/main/default/objects/Submittal__c/validationRules/Final_Hr_Interview_Rule_FN1.validationRule-meta.xml
<ValidationRule>
    <fullName>Final_Hr_Interview_Rule_FN1</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c,&quot;Internal Verification&quot;), OR(ISBLANK( Expected_Salary__c) ))</errorConditionFormula>
    <errorDisplayField>Expected_Salary__c</errorDisplayField>
    <errorMessage>Fill Expected Salary</errorMessage>
</ValidationRule>