ATS/main/default/objects/Submittal__c/validationRules/Final_HR_Interview_Validation_N.validationRule-meta.xml
<ValidationRule>
    <fullName>Final_HR_Interview_Validation_N</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( Stage__c , &apos;Final HR Interview&apos;),ISBLANK( Technical_Interview_2_Date__c ))</errorConditionFormula>
    <errorDisplayField>Technical_Interview_2_Date__c</errorDisplayField>
    <errorMessage>Enter Technical Interview 2 Date</errorMessage>
</ValidationRule>