ATS/main/default/objects/Submittal__c/validationRules/Hold_Trigger_N.validationRule-meta.xml
<ValidationRule>
    <fullName>Hold_Trigger_N</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR(ISPICKVAL( Status__c , &apos;Internal Hold&apos;),  ISPICKVAL(Status__c , &apos;Client Hold&apos;) ) ,ISBLANK( Reason_for_Holding__c))</errorConditionFormula>
    <errorDisplayField>Reason_for_Holding__c</errorDisplayField>
    <errorMessage>Enter reason for holding</errorMessage>
</ValidationRule>