ATS/main/default/objects/Submittal__c/validationRules/Hold_Trigger_Rule_FN.validationRule-meta.xml
<ValidationRule>
    <fullName>Hold_Trigger_Rule_FN</fullName>
    <active>false</active>
    <errorConditionFormula>AND( OR(ISPICKVAL( Status__c , &apos;Internal Hold&apos;),  ISPICKVAL(Status__c , &apos;Client Hold&apos;) ) ,  ISNULL( Date_of_Hold__c))</errorConditionFormula>
    <errorDisplayField>Date_of_Hold__c</errorDisplayField>
    <errorMessage>Enter Date of hold</errorMessage>
</ValidationRule>