ATS/main/default/objects/Submittal__c/validationRules/HR_Interview_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>HR_Interview_Date_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>OR(HR_Interview_Date__c  &lt;  Submitted_Date__c, HR_Interview_Date__c   &gt;  TODAY() )</errorConditionFormula>
    <errorDisplayField>HR_Interview_Date__c</errorDisplayField>
    <errorMessage>HR interview date is should be between submitted date to current date</errorMessage>
</ValidationRule>