ATS/main/default/objects/Submittal__c/validationRules/HR_Interview_Field_Valdation.validationRule-meta.xml
<ValidationRule>
    <fullName>HR_Interview_Field_Valdation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c, &apos;Technical Interview 1&apos;), OR(ISNULL(HR_Interview_Date__c)))</errorConditionFormula>
    <errorDisplayField>HR_Interview_Date__c</errorDisplayField>
    <errorMessage>HR Interview Date  should be filled</errorMessage>
</ValidationRule>