ATS/main/default/objects/Submittal__c/validationRules/HR_Interview_Validation_Rule_N.validationRule-meta.xml
<ValidationRule>
    <fullName>HR_Interview_Validation_Rule_N</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Stage__c , &apos;HR Interview&apos;),  Send_Notification__c = False)</errorConditionFormula>
    <errorDisplayField>Send_Notification__c</errorDisplayField>
    <errorMessage>Check the Send Notification Check box</errorMessage>
</ValidationRule>