ATS/main/default/objects/Submittal__c/validationRules/Internal_verification_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Internal_verification_date</fullName>
    <active>false</active>
    <errorConditionFormula>OR (Internal_Verification_Date__c  &lt;     DATEVALUE( CreatedDate ), Internal_Verification_Date__c  &gt;  TODAY() )</errorConditionFormula>
    <errorDisplayField>Internal_Verification_Date__c</errorDisplayField>
    <errorMessage>Internal verification date should be between record created date and current date</errorMessage>
</ValidationRule>