ATS/main/default/objects/Submittal__c/validationRules/Internal_verification_Rule_FN.validationRule-meta.xml
<ValidationRule>
    <fullName>Internal_verification_Rule_FN</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c,&quot;Ready for Submit&quot;), OR( ISBLANK(Internal_Verification_Feedback__c) ) )</errorConditionFormula>
    <errorDisplayField>Internal_Verification_Feedback__c</errorDisplayField>
    <errorMessage>Enter Internal Verification Feedback</errorMessage>
</ValidationRule>