ATS/main/default/objects/Submittal__c/validationRules/Package_Field_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Package_Field_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status__c,&apos;Client Accept&apos; ), ISBLANK(  Package__c  )  )</errorConditionFormula>
    <errorDisplayField>Package__c</errorDisplayField>
    <errorMessage>Fill this field</errorMessage>
</ValidationRule>