ATS/main/default/objects/Submittal__c/validationRules/Ready_to_submit_validation_rule_FN1.validationRule-meta.xml
<ValidationRule>
    <fullName>Ready_to_submit_validation_rule_FN1</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Stage__c , &apos;Internal Verification&apos;), ISBLANK(Current_Salary__c))</errorConditionFormula>
    <errorDisplayField>Current_Salary__c</errorDisplayField>
    <errorMessage>Enter Current Salary</errorMessage>
</ValidationRule>