ATS/main/default/objects/Submittal__c/validationRules/Ready_to_Submit_Validation_Rule_N.validationRule-meta.xml
<ValidationRule>
    <fullName>Ready_to_Submit_Validation_Rule_N</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Stage__c , &apos;Ready for Submit&apos;),ISBLANK( Internal_Verification_Date__c))</errorConditionFormula>
    <errorDisplayField>Internal_Verification_Date__c</errorDisplayField>
    <errorMessage>Enter Internal Verification Date</errorMessage>
</ValidationRule>