ATS/main/default/objects/Submittal__c/validationRules/Reject_Trigger_N.validationRule-meta.xml
<ValidationRule>
    <fullName>Reject_Trigger_N</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR( ISPICKVAL( Status__c , &apos;Client Reject&apos;), ISPICKVAL(Status__c , &apos;Internal Reject&apos;)),ISBLANK( Reason_for_Rejection__c))</errorConditionFormula>
    <errorDisplayField>Reason_for_Rejection__c</errorDisplayField>
    <errorMessage>Enter the reason for Rejection</errorMessage>
</ValidationRule>