ATS/main/default/objects/Submittal__c/validationRules/Reject_Trigger_Rule_FN.validationRule-meta.xml
<ValidationRule>
    <fullName>Reject_Trigger_Rule_FN</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR( ISPICKVAL( Status__c , &apos;Client Reject&apos;), ISPICKVAL(Status__c , &apos;Internal Reject&apos;)),ISNULL( Rejected_Date__c ))</errorConditionFormula>
    <errorDisplayField>Rejected_Date__c</errorDisplayField>
    <errorMessage>Enter Rejected Date</errorMessage>
</ValidationRule>