ATS/main/default/objects/Submittal__c/validationRules/Submited_Validation_Rule_N.validationRule-meta.xml
<ValidationRule>
    <fullName>Submited_Validation_Rule_N</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Stage__c , &apos;Submitted&apos;), ISBLANK( Submitted_Date__c ))</errorConditionFormula>
    <errorDisplayField>Submitted_Date__c</errorDisplayField>
    <errorMessage>Enter Submitted Date</errorMessage>
</ValidationRule>