ATS/main/default/objects/Submittal__c/validationRules/Submitted_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Submitted_Date</fullName>
    <active>false</active>
    <errorConditionFormula>OR(Submitted_Date__c  &lt;  Internal_Verification_Date__c, Submitted_Date__c  &gt;  TODAY())</errorConditionFormula>
    <errorDisplayField>Submitted_Date__c</errorDisplayField>
    <errorMessage>Submitted date should be between Internal verification date and Today date</errorMessage>
</ValidationRule>