ATS/main/default/objects/Submittal__c/validationRules/Submitted_Validation_Rule_FN.validationRule-meta.xml
<ValidationRule>
    <fullName>Submitted_Validation_Rule_FN</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Stage__c , &apos;Submitted&apos;),  OR( ISBLANK( Submitted_Comment__c)))</errorConditionFormula>
    <errorDisplayField>Submitted_Comment__c</errorDisplayField>
    <errorMessage>Fill this field</errorMessage>
</ValidationRule>