ATS/main/default/objects/Submittal__c/validationRules/Tech_interview1_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Tech_interview1_date</fullName>
    <active>false</active>
    <errorConditionFormula>OR(Technical_Interview_1_Date__c  &lt;  HR_Interview_Date__c, Technical_Interview_1_Date__c  &gt;  TODAY() )</errorConditionFormula>
    <errorDisplayField>Technical_Interview_1_Date__c</errorDisplayField>
    <errorMessage>Technical interview1 date is should be HR interview date to current date</errorMessage>
</ValidationRule>