ATS/main/default/objects/Submittal__c/validationRules/Tech_interview2_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Tech_interview2_date</fullName>
    <active>false</active>
    <errorConditionFormula>OR(Technical_Interview_2_Date__c  &lt; Technical_Interview_1_Date__c, Technical_Interview_2_Date__c  &gt;  TODAY() )</errorConditionFormula>
    <errorDisplayField>Technical_Interview_2_Date__c</errorDisplayField>
    <errorMessage>Technical interview2 date is should be Technical interview1 date to current date</errorMessage>
</ValidationRule>