ATS/main/default/objects/Submittal__c/validationRules/Technical_Interview1_field_validation_FN.validationRule-meta.xml
<ValidationRule>
    <fullName>Technical_Interview1_field_validation_FN</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c, &apos;Technical Interview 2&apos;), ISBLANK(Technical_Interview_1_Feedback__c ))</errorConditionFormula>
    <errorDisplayField>Technical_Interview_1_Feedback__c</errorDisplayField>
    <errorMessage>Enter Technical Interview Feedback</errorMessage>
</ValidationRule>