ATS/main/default/objects/Submittal__c/validationRules/Technical_Interview_1_Field_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Technical_Interview_1_Field_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c, &apos;Technical Interview 2&apos;), ISNULL( Technical_Interview_1_Date__c))</errorConditionFormula>
    <errorDisplayField>Technical_Interview_1_Date__c</errorDisplayField>
    <errorMessage>Technical Interview 1 Date</errorMessage>
</ValidationRule>