ATS/main/default/objects/Submittal__c/validationRules/Technical_Interview_1_Validation_Rule_N.validationRule-meta.xml
<ValidationRule>
    <fullName>Technical_Interview_1_Validation_Rule_N</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Stage__c , &apos;Technical Interview 1&apos;),  ISBLANK( HR_Interview_Feedback__c ))</errorConditionFormula>
    <errorDisplayField>HR_Interview_Feedback__c</errorDisplayField>
    <errorMessage>Enter HR Interview Feedback</errorMessage>
</ValidationRule>