ATS/main/default/objects/Submittal__c/validationRules/Technical_Interview_2_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Technical_Interview_2_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Stage__c , &apos;Final HR Interview&apos;),ISBLANK( Technical_Interview_2_Feedback__c ))</errorConditionFormula>
    <errorDisplayField>Technical_Interview_2_Feedback__c</errorDisplayField>
    <errorMessage>Enter the feedback</errorMessage>
</ValidationRule>