ATS/main/default/objects/Submittal__c/listViews/AI_In_Progress.listView-meta.xml
<ListView>
    <fullName>AI_In_Progress</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Client_Job_Id__c</columns>
    <columns>Client__c</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>Submitted_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Client__c</field>
        <operation>equals</operation>
        <value>Albany International</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>AI In Progress</label>
</ListView>