ATS/main/default/objects/Submittal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client_Job_Id__c</columns>
    <columns>Resource__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Client__c</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>Submitted_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_Title__c</field>
        <operation>equals</operation>
        <value>SAP Logistics</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Prospect,Internal Verification,Ready to Submit,Submitted,HR Interview,Technical Interview 1,Technical Interview 2,Final HR Interview</value>
    </filters>
    <label>All</label>
</ListView>