ATS/main/default/objects/Submittal__c/listViews/DBT_Hold.listView-meta.xml
<ListView>
    <fullName>DBT_Hold</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Client_Job_Id__c</columns>
    <columns>Client__c</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>Submitted_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Client__c</field>
        <operation>equals</operation>
        <value>Digital Biz Tech</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Internal Hold,Client Hold</value>
    </filters>
    <label>DBT Hold</label>
</ListView>