ATS/main/default/objects/Submittal__c/listViews/In_Progress.listView-meta.xml
<ListView>
    <fullName>In_Progress</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Job_Posting__c</columns>
    <columns>Client__c</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <filters>
        <field>Job_Posting__c</field>
        <operation>equals</operation>
        <value>Job-0025</value>
    </filters>
    <label>All In Progress</label>
</ListView>